<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cunyfirst.MyInfo">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/layout1"
                android:background="#5bc0de" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/identification"
                    android:id="@+id/textView1"
                    android:textColor="#ffffff"
                    android:padding="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/recyclerview1"
                android:layout_below="@+id/layout1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_alignParentLeft="true"
                android:id="@+id/layout2"
                android:background="#5bc0de"
                android:layout_below="@+id/recyclerview1" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/balance"
                    android:id="@+id/textView2"
                    android:textColor="#ffffff"
                    android:padding="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/recyclerview2"
                android:layout_below="@+id/layout2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_alignParentLeft="true"
                android:id="@+id/layout3"
                android:background="#5bc0de"
                android:layout_below="@+id/recyclerview2" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/GPA"
                    android:id="@+id/textView3"
                    android:textColor="#ffffff"
                    android:padding="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/recyclerview3"
                android:layout_below="@+id/layout3" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
